package com.mgudux.ifas.domain.entity.enums;

public enum MeasurementUnit {
    LITER,
    KILOGRAM,
    PIECE
}