package com.mgudux.ifas.domain.entity.enums;

public enum StorageType {
    SHELVES,
    PRESSURE,
    CRYOGENIC,
    COMPOST
}
