erDiagram
    Company ||--o{ Storage : "owns"
    Storage ||--o{ Content : "contains"

    Company {
        int id PK
        String name
        string address
        IndustryType industry
        List(Storage) storages
        LocalDateTime updated
        LocalDateTime created

    }

    Storage {
        int id PK
        int companyId FK
        StorageType type
        string location
        int constructionYear
        Double capacity
        MeasurementUnit capacityUnit
        LocalDateTime lastCheck
        int monthsCheckIntervall
        List(Content) contents
        LocalDateTime updated
        LocalDateTime created

    }

    Content {
        int id PK
        int storageId FK
        string name
        HazardClass hazard
        Double amount
        MeasurementUnit amountUnit
        LocalDateTime expirationDate
        LocalDateTime updated
        LocalDateTime created

    }

    HAZARD_CLASS {
        string EXPLOSIVE
        string FLAMMABLE
        string TOXIC
        string RADIOACTIVE
    }

    MEASUREMENT_UNIT {
        Double LITER
        Double KILOGRAM
        Double PIECE
    }

    STORAGE_TYPE {
        string SHELVES
        string PRESSURE
        string CRYOGENIC
        string COMPOST
    }

    INDUSTRY_TYPE {
        string LOGISTICS
        string CHEMICAL
    }